@@ -14,6 +14,10 @@
 	(CygbuildDefineGlobalMain): New EXTRA_MANDIR_FILE 'mandir'.
 	(CygbuildInstallExtraManual): Add support for reading manual pages
 	from subdirectory CYGWIN-PATCHES/manpages.
+	(CygbuildDefineGlobalMain): Make SCRIPT_BUILD_CYGFILE and
+	SCRIPT_CONFIGURE_CYGFILE absolute.
+
+	* etc/template/preremove.sh.tmp Add --verbose to rm(1) command.
 
 2008-10-24  Jari Aalto  <jari.aalto@cante.net>
 
